# mermin

./: .cursorignore  .dockerignore  .gitignore  .markdownlint.yaml  .markdownlint.yml  .output.txt  .pre-commit-config.yaml  .pre-commit.yaml  .releaserc.yaml  CHANGELOG.md  COPYRIGHT  Cargo.toml  Dockerfile  GKE-troubleshooting.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_CLEANUP.md  Investigate.md  LICENSE-MIT  MISSING-IANA-IE.md  Makefile  NETLINK_IMPLEMENTATION.md  NETLINK_PURE_RUST_INTEGRATION.md  NOTES.md  PIPELINE.md  PR-DESCRIPTION.md  README.md  REFACTOR-GOALS.md  TCP_FLAGS_IMPLEMENTATION.md  TEST_NETLINK_IMPLEMENTATION.md  artifacthub-repo.yml  config.hcl  config.yaml  context-transfer-2026-01-23-btf-invalid-typeid.md  example-config.yaml  gemini-research-results.md  index.yaml  integration_test_cleanup.md  mermin-0.1.0-beta.10.tgz  mermin-0.1.0-beta.11.tgz  mermin-0.1.0-beta.12.tgz  (+46 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.junie/: guidelines.md
common-build/: Cargo.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUMMARY.md  architecture.md  custom_crd_selector_relations.md  quickstart.md
hack/: gen_metrics_doc.jq  sanitize_grafana_dashboard.jq  test_hot_reload.sh
local/: kind-config.yaml  values.yaml
makefiles/: helm.mk
mergent/: Cargo.toml  build.rs
mergent-common/: Cargo.toml
mergent-ebpf/: Cargo.toml
mergent-ebpf/src/: main copy.rs  main.rs
mermin/: Cargo.toml  Chart.yaml  build.rs  values.yaml
mermin-common/: Cargo.toml
mermin-core/: Cargo.toml
mermin-core/src/: lib.rs  ports.rs
mermin-core/src/flow/: base.rs  exporter.rs  mod.rs
mermin-core/src/k8s/: attributor.rs  mod.rs  resource_parser.rs  resource_store.rs
mermin-ebpf/: Cargo.toml
mermin-ebpf/src/: main copy.rs  main.rs  main_v0.1.rs  main_v0.rs  sk_storage.rs
mermin-exporters/: Cargo.toml
mermin-exporters/src/: lib.rs
mermin-exporters/src/logger/: mod.rs
mermin-exporters/src/logging/: mod.rs
mermin-exporters/src/otlp/: mod.rs  opts.rs  trace.rs
mermin/benches/: ebpf_simulation.rs
mermin/src/: cli.rs  community_id.rs  config.rs  error.rs  exporters.rs  filter.rs  flow.rs  flow_manager.rs  health.rs  iface.rs  interface_controller.rs  ip.rs  k8s.rs  listening_ports.rs  main.rs  metrics.rs  netns.rs  otlp.rs  packet.rs  pipes.rs  process_name.rs  process_name_scanner.rs  resource_parser.rs  runtime.rs  source.rs  span.rs
mermin/src/exporters/: stdout.rs
mermin/src/filter/: opts.rs  source.rs
mermin/src/health/: error.rs  handlers.rs  mod.rs
mermin/src/iface/: README.md  controller.rs  mod.rs  netlink_monitor.rs  netns.rs  threads.rs  types.rs
mermin/src/k8s/: attributor.rs  container_resolver.rs  decorator.rs  error.rs  filter.rs  opts.rs  owner_relations.rs  parser.rs  resource_parser.rs  selector.rs  selector_relations.rs
mermin/src/metrics/: cleanup.rs  ebpf.rs  error.rs  evictor.rs  export.rs  flow.rs  k8s.rs  labels.rs  opts.rs  processing.rs  registry.rs  server.rs  span.rs  userspace.rs
mermin/src/otlp/: error.rs  filter.rs  metrics_exporter.rs  opts.rs  provider.rs  resource.rs  router.rs  trace.rs  tracing_layer.rs
mermin/src/packet/: parser.rs  types.rs
mermin/src/pipes/: filter.rs  ringbuf.rs  router.rs
mermin/src/runtime/: capabilities.rs  cli.rs  commands.rs  component.rs  conf.rs  config.rs  context.rs  ebpf_log.rs  enums.rs  memory.rs  opts.rs  pipeline.rs  props.rs  reload.rs  runtime.rs  serde_level.rs  shutdown.rs  task_manager.rs
mermin/src/runtime/commands/: bpf.rs  diagnose.rs
mermin/src/runtime/component/: error.rs  handle.rs  manager.rs  mod.rs
mermin/src/runtime/conf/: conf_serde.rs  flow.rs  pipeline.rs
mermin/src/source/: filter.rs  ringbuf.rs
mermin/src/span/: community_id.rs  direction.rs  ebpf_guard.rs  flow.rs  opts.rs  producer.rs  tcp.rs  trace_cache.rs  trace_id.rs
mermin/templates/: daemonset.yaml
mermin/tests/: integration.rs  netlink_test_neli.rs  netlink_test_rtnetlink.rs  netlink_test_sys.rs
mermin/tests/e2e/cni/: test.sh
mermin/tests/e2e/common/: check_instruction_count.sh  setup.sh  teardown.sh
mermin/tests/e2e/grafana/: README.md  docker-compose.yaml  test.sh  values.yaml
mermin/tests/e2e/grafana/config/: grafana-datasource.yaml  mermin.ci.hcl  mermin.hcl  otel-collector.yaml  prometheus.yaml
mermin/tests/e2e/grafana/k8s/: servicemonitor.yaml  traffic-generator.yaml
network-types/: Cargo.toml  README.md
network-types/src/: ah.rs  destopts.rs  esp.rs  eth.rs  fragment.rs  geneve.rs  gre.rs  hip.rs  hop.rs  icmp.rs  ip.rs  lib.rs  macros.rs  mobility.rs  parser.rs  route.rs  shim6.rs  tcp.rs  udp.rs  vxlan.rs  wireguard.rs
network-types/tests/: Cargo.toml  Makefile  run-tests.sh  run_build.sh  run_clean.sh  run_setup.sh  run_test.sh
network-types/tests/integration/: Cargo.toml  build.rs
network-types/tests/integration-common/: Cargo.toml
network-types/tests/integration-common/src/: lib.rs
network-types/tests/integration-ebpf/: Cargo.toml
network-types/tests/integration-ebpf/src/: main.rs
network-types/tests/integration/src/: ah.rs  crh.rs  destopts.rs  esp.rs  eth.rs  fragment.rs  geneve.rs  gre.rs  hip.rs  hop.rs  ipv4.rs  ipv6.rs  main.rs  mobility.rs  routing.rs  rpl_source_route.rs  segment_routing.rs  shim6.rs  tcp.rs  type2.rs  udp.rs  utils.rs  vxlan.rs  wireguard.rs
scripts/: analyze_call_chain.sh  check_stack_usage.sh  cumulative_stack_calculator.sh  test_cni.sh
tests/eth-ebpf-test/: Cargo.toml  build.rs
tests/eth-ebpf-test-ebpf/: Cargo.toml
tests/eth-ebpf-test-ebpf/src/: bgp.rs  common.rs  geneve.rs  gre.rs  main.rs  ospf.rs  quic.rs  sctp.rs
tests/eth-ebpf-test/src/: main.rs
tests/eth-ebpf-test/tests/: bgp_hdr_kernel_integration.rs  common.rs  eth_hdr_integration.rs  eth_hdr_kernel_integration.rs  geneve_hdr_kernel_integration.rs  gre_hdr_kernel_integration.rs  ospf_hdr_kernel_integration.rs  quic_hdr_integration.rs  quic_hdr_kernel_integration.rs  sctp_hdr_kernel_integration.rs
tests/integration-ebpf/: Cargo.toml
tests/integration-ebpf/src/: lib.rs  main.rs
(+300 files in other folders)
