[package]
name = "mermin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
network-types = { path = "../network-types" }
mermin-common = { path = "../mermin-common", features = [] }
async-trait = "0.1.89"
kube = { version = "1.1.0", features = ["runtime", "derive", "client"] }
kube-runtime = "1.1.0"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
futures = "0.3"
anyhow = "1.0.99"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true, features = [
    "full",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }

[lib]
name = "mermincore"
path = "src/lib.rs"

