[package]
name = "mermin-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
mermin-common = { path = "../mermin-common" }
network-types = { path = "../network-types" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "mermin-ebpf"
path = "src/main.rs"
