[package]
name = "mermin"
version = "0.1.0"
edition = "2024"
description = "An eBPF-based observability tool to monitor network traffic and system calls."

license.workspace = true

[features]
flow = []

[dev-dependencies]
serde_yaml = "0.9.34"
socket2 = "0.5"

[dependencies]
mermin-common = { path = "../mermin-common", features = [] }
network-types = { path = "../network-types" }
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-route = "0.21"

anyhow = { workspace = true, default-features = true }
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "full",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }
clap = { workspace = true, features = ["derive", "env", "help", "suggestions", "usage"] }
figment = { version = "0.10", features = ["env", "test", "yaml"] }
ipnetwork = "0.21.1"
kube = { version = "1.1.0", features = ["runtime", "derive", "client"] }
kube-runtime = "1.1.0"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
futures = "0.3"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
humantime = "2.2.0"
base64 = "0.21"
sha1 = "0.10"
pnet = "0.34"
dashmap = "6.0"
fxhash = "0.2"
globset = "0.4"
nix = { version = "0.29", features = ["process"] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
common-build = { path = "../common-build" }

[[bin]]
name = "mermin"
path = "src/main.rs"
