[package]
name = "mermin"
version = "0.1.0"
edition = "2024"
description = "An eBPF-based observability tool to monitor network traffic and system calls."

license.workspace = true

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[[bin]]
name = "mermin"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
axum = "0.7"
aya = { workspace = true, features = ["async_tokio"] }
base64 = "0.21"
bytesize = "1.3"
clap = { workspace = true, features = ["derive", "env", "help", "suggestions", "usage"] }
crossbeam = "0.8"
dashmap = "6.0"
dns-lookup = "2.0"
figment = { version = "0.10", features = ["env", "test", "yaml"] }
futures = "0.3"
fxhash = "0.2"
globset = "0.4.17"
hcl-rs = "0.19.2"
humantime = "2.2.0"
hyper-rustls = { version = "0.27", features = ["http2"] }
hyper-util = "0.1"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
jsonpath-rust = "1.0.4"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = { version = "1.1.0", features = ["runtime", "derive", "client"] }
kube-runtime = "1.1.0"
lazy_static = "1.4"
libc = { workspace = true }
log = { workspace = true }
mermin-common = { path = "../mermin-common", features = ["user"] }
moka = { version = "0.12", features = ["future"] }
network-types = { path = "../network-types" }
notify = "6.1"
netlink-packet-core = "0.8.1"
netlink-packet-route = "0.25.1"
netlink-sys = "0.8.7"
nix = { version = "0.30.1", features = ["sched"] }
num-iter = "0.1.45"
num-traits = "0.2.19"
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["experimental_async_runtime", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
pnet = "0.34"
prometheus = "0.13"
reqwest = {  version = "0.12.26"}
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "full",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }
tonic = { version = "0.14.2", features = ["transport"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
http = "1.3.1"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
common-build = { path = "../common-build" }

[dev-dependencies]
serde_yaml = "0.9.34"
socket2 = "0.5"
tempfile = "3.8"
