[package]
name = "integration-ebpf"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
integration-common = { path = "../integration-common" }
network-types = { path = "../../network-types" }
log = { workspace = true }

[[bin]]
name = "integration"
path = "src/main.rs"

[build-dependencies]
aya-build = "0.1"
which = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"