[package]
name = "integration"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
anyhow = { workspace = true, default-features = true }
log = { workspace = true }
libc = "0.2"
bytes = "1"
once_cell = "1.17"
integration-common = { path = "../integration-common", features = ["user"] }
network-types = { path = "../.." }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

[[bin]]
name = "integration"
path = "src/main.rs"