[package]
name = "integration"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "integration"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
bytes = "1"
env_logger = { workspace = true }
integration-common = { path = "../integration-common", features = ["user"] }
log = { workspace = true }
network-types = { path = "../.." }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
common-build = { path = "../../../common-build" }
